<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Elio B. Boîte à outils</string>


    <string name="date_default">JJ/MM/AAAA</string>
    <string name="time_default">HH:MM</string>

    <string name="form_invalid">Champ(s) invalide(s)</string>


    <string name="login_title">Connexion</string>

    <string name="login_username">Identifiant</string>
    <string name="login_password">Mot de passe</string>

    <string name="login_validate">Se connecter</string>
    <string name="login_success">Enchanté %1$s</string>
    <string name="login_fail">Mauvais couple identifiant/mot de passe</string>


    <string name="lifecycle_switch">Zé tipar !</string>

    <string name="fragment_lifecycle">Bienvenue dans le premier fragment</string>
    <string name="fragment_lifecycle_bis">Et voici le second</string>


    <string name="storage_title">Sauvegarde</string>

    <string name="storage_surname">Nom</string>
    <string name="storage_firstname">Prénom</string>
    <string name="storage_birthday">Date de naissance</string>
    <string name="storage_secure">JSON chiffré</string>

    <string name="storage_back">Retour</string>

    <string name="storage_validate">Valider</string>
    <string name="storage_form_valid">Utilisateur sauvegardé : %1$s</string>
    <string name="storage_form_valid_secure">Utilisateur chiffré : JSON</string>

    <string name="storage_read">Lire</string>
    <string name="storage_read_error">Aucune sauvegarde trouvée</string>

    <string name="storage_delete">Supprimer</string>
    <string name="storage_delete_done">Supprimé : %1$s</string>
    <string name="storage_delete_error">Suppression impossible</string>

    <string name="storage_alert_title">Vos informations</string>
    <string name="storage_alert_message">Nom : %1$s\nPrénom : %2$s\nDate de naissance : %3$s\nÂge : %4$d</string>

    <string name="storage_fab_add_json">Ajouter au JSON</string>
    <string name="storage_fab_add_json_secure">Chiffrer et ajouter au JSON</string>
    <string name="storage_fab_add_room">Ajouter à Room</string>
    <string name="storage_fab_show_json">Afficher le JSON</string>
    <string name="storage_fab_show_json_secure">Afficher le JSON chiffré</string>
    <string name="storage_fab_show_room">Afficher Room</string>
    <string name="storage_fab_delete_json">Supprimer le JSON</string>
    <string name="storage_fab_delete_json_secure">Supprimer le JSON chiffré</string>
    <string name="storage_fab_delete_room">Vider Room</string>

    <string name="user_room_title">Liste Room</string>


    <string name="permissions_title">Accès aux informations Android</string>

    <string name="permissions_dialog_title">Source de l\'image</string>
    <string name="permissions_dialog_gallery">Galerie</string>
    <string name="permissions_dialog_camera">Appareil photo</string>

    <string name="permissions_contacts_title">Contacts</string>

    <string name="permissions_coords">Latitude : %1$f\nLongitude : %2$f</string>
    <string name="permissions_gps_denied">Accès au GPS interdit</string>
    <string name="permissions_gps_disabled">GPS désactivé</string>
    <string name="permissions_gps_enabled">GPS activé</string>

    <string name="permissions_denied">Permission refusée</string>


    <string name="webservices_api_error">Erreur API : %1$s</string>

    <string name="webservices_user_name_default">Prénom NOM</string>
    <string name="webservices_user_address_default">1 Avenue de la République</string>
    <string name="webservices_user_email_default">prenom.nom@example.com</string>


    <string name="event_calendar">Calendrier</string>
    <string name="event_add_title">Ajout d\'un événement</string>

    <string name="event_title">Titre</string>
    <string name="event_description">Description</string>
    <string name="event_location">Emplacement</string>
    <string name="event_date_start">Date de début</string>
    <string name="event_date_end">Date de fin</string>
    <string name="event_time_start">Heure de début</string>
    <string name="event_time_end">Heure de fin</string>

    <string name="event_all_day">Journée entière</string>
    <string name="event_busy">Occupé</string>
    <string name="event_free">Libre</string>

    <string name="event_entire_date_start">%1$s, Journée entière</string>

    <string name="event_add">Ajouter</string>
    <string name="event_add_done">Événement ajouté</string>


    <string name="todo_add_title">Ajout d\'une tâche</string>

    <string name="todo_title">Tâche</string>
    <string name="todo_description">Description</string>

    <string name="todo_add">Ajouter</string>
    <string name="todo_add_error">Erreur Firebase : ADD</string>
    <string name="todo_get_error">Erreur Firebase : GET</string>


    <string name="home_title">Bonjour</string>

    <string name="home_lifecycle">Cycle de vie</string>
    <string name="home_storage">Sauvegarde</string>
    <string name="home_permissions">Permissions</string>
    <string name="home_webservices">Webservices</string>
    <string name="home_calendar">Calendrier</string>
    <string name="home_todo_list">Tâches à faire</string>

    <string name="home_logout">Déconnexion</string>
    <string name="home_logout_done">Déconnecté</string>


    <string name="desc_logo_isen">Logo ISEN Toulon</string>
    <string name="desc_phone_call">Icône d\'appel</string>
    <string name="desc_sd_card">Icône carte SD</string>
    <string name="desc_chat_bubble">Icône infobulle</string>
    <string name="desc_download_icon">Icône de téléchargement</string>
    <string name="desc_camera">Icône d\'appareil photo</string>
    <string name="desc_user_picture">Avatar de l\'utilisateur</string>
    <string name="desc_busy">Icône sens interdit</string>
    <string name="desc_list">Icône liste</string>
    <string name="desc_calendar">Icône calendrier</string>
    <string name="desc_bin">Icône poubelle</string>
</resources>