<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/storage_fab_add_json"
        android:title="@string/storage_fab_add_json"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:orderInCategory="1"
        android:background="#d4010f" />

    <item
        android:id="@+id/storage_fab_add_room"
        android:title="@string/storage_fab_add_room"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/storage_fab_show_json"
        android:title="@string/storage_fab_show_json"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/storage_fab_show_room"
        android:title="@string/storage_fab_show_room"
        android:icon="@drawable/ic_folder_shared_black_24dp"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/storage_fab_delete_json"
        android:title="@string/storage_fab_delete_json"
        android:icon="@drawable/ic_backspace_black_24dp"
        android:orderInCategory="5" />

    <item
        android:id="@+id/storage_fab_delete_room"
        android:title="@string/storage_fab_delete_room"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:orderInCategory="6" />
</menu>