<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="217dp"
        android:layout_height="36dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="97dp"
        android:contentDescription="@string/desc_logo_isen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_isen" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/imgLifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/desc_chat_bubble"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:tint="@color/colorIconTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imgPermissions"
        app:layout_constraintEnd_toEndOf="@+id/imgPermissions"
        app:layout_constraintStart_toStartOf="@+id/imgPermissions"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/ic_chat_bubble_outline_black_24dp" />

    <ImageView
        android:id="@+id/imgBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/desc_sd_card"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:tint="@color/colorIconTint"
        app:layout_constraintBottom_toBottomOf="@+id/imgLifecycle"
        app:layout_constraintEnd_toEndOf="@+id/imgWebservices"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imgWebservices"
        app:layout_constraintTop_toTopOf="@+id/imgLifecycle"
        app:srcCompat="@drawable/ic_sd_card_black_24dp" />

    <TextView
        android:id="@+id/textLifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_lifecycle"
        app:layout_constraintEnd_toEndOf="@+id/imgLifecycle"
        app:layout_constraintStart_toStartOf="@+id/imgLifecycle"
        app:layout_constraintTop_toBottomOf="@+id/imgLifecycle" />

    <TextView
        android:id="@+id/textBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_storage"
        app:layout_constraintEnd_toEndOf="@+id/imgBackup"
        app:layout_constraintStart_toStartOf="@+id/imgBackup"
        app:layout_constraintTop_toBottomOf="@+id/imgBackup" />

    <TextView
        android:id="@+id/textPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_permissions"
        app:layout_constraintEnd_toEndOf="@+id/imgPermissions"
        app:layout_constraintStart_toStartOf="@+id/imgPermissions"
        app:layout_constraintTop_toBottomOf="@+id/imgPermissions" />

    <TextView
        android:id="@+id/textWebservices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_webservices"
        app:layout_constraintEnd_toEndOf="@+id/imgWebservices"
        app:layout_constraintStart_toStartOf="@+id/imgWebservices"
        app:layout_constraintTop_toBottomOf="@+id/imgWebservices" />

    <ImageView
        android:id="@+id/imgPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/desc_phone_call"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:tint="@color/colorIconTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgWebservices"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_volume_up_black_24dp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/home_logout"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgTodoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/desc_list"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:tint="@color/colorIconTint"
        app:layout_constraintBottom_toBottomOf="@+id/imgCalendar"
        app:layout_constraintEnd_toEndOf="@+id/imgWebservices"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/imgWebservices"
        app:layout_constraintTop_toTopOf="@+id/imgCalendar"
        app:srcCompat="@drawable/ic_list_black_24dp" />

    <ImageView
        android:id="@+id/imgWebservices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/desc_download_icon"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:tint="@color/colorIconTint"
        app:layout_constraintBottom_toBottomOf="@+id/imgPermissions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgPermissions"
        app:layout_constraintTop_toTopOf="@+id/imgPermissions"
        app:srcCompat="@drawable/ic_file_download_black_24dp" />

    <ImageView
        android:id="@+id/imgCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/desc_calendar"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:tint="@color/colorIconTint"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="@+id/imgPermissions"
        app:layout_constraintStart_toStartOf="@+id/imgPermissions"
        app:layout_constraintTop_toTopOf="@+id/textPermissions"
        app:layout_constraintVertical_bias="0.39999998"
        app:srcCompat="@drawable/ic_date_range_black_24dp" />

    <TextView
        android:id="@+id/textCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_calendar"
        app:layout_constraintEnd_toEndOf="@+id/imgCalendar"
        app:layout_constraintStart_toStartOf="@+id/imgCalendar"
        app:layout_constraintTop_toBottomOf="@+id/imgCalendar" />

    <TextView
        android:id="@+id/textTodoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_todo_list"
        app:layout_constraintEnd_toEndOf="@+id/imgTodoList"
        app:layout_constraintStart_toStartOf="@+id/imgTodoList"
        app:layout_constraintTop_toBottomOf="@+id/imgTodoList" />
</androidx.constraintlayout.widget.ConstraintLayout>