<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/event_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_description"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/event_location"
        app:layout_constraintStart_toStartOf="@+id/textDescription"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <TextView
        android:id="@+id/textDateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/event_date_start"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocation" />

    <ImageView
        android:id="@+id/imgBusy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_busy"
        android:tint="@color/colorDarkGreen"
        app:layout_constraintBottom_toBottomOf="@+id/textDateEnd"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toTopOf="@+id/textDateEnd"
        app:srcCompat="@drawable/ic_do_not_disturb_off_black_24dp" />

    <TextView
        android:id="@+id/textDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/event_date_end"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textDateStart"
        app:layout_constraintTop_toBottomOf="@+id/textDateStart" />

    <TextView
        android:id="@+id/textBusy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_free"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imgBusy"
        app:layout_constraintStart_toEndOf="@+id/imgBusy"
        app:layout_constraintTop_toTopOf="@+id/imgBusy" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDateEnd" />
</androidx.constraintlayout.widget.ConstraintLayout>