<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddEventActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/event_add_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutTitle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutDescription"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLocation"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/inputDateStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/inputDateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_birthday_default"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/inputAllDay"
        app:layout_constraintEnd_toStartOf="@+id/inputDateEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutLocation" />

    <TextView
        android:id="@+id/inputDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_birthday_default"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputDateStart"
        app:layout_constraintTop_toTopOf="@+id/inputDateStart" />

    <Switch
        android:id="@+id/inputAllDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10sp"
        android:switchPadding="10dp"
        android:text="@string/event_all_day"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/inputBusy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDateStart" />

    <TextView
        android:id="@+id/textDateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/event_date_start"
        app:layout_constraintBottom_toTopOf="@+id/inputDateStart"
        app:layout_constraintEnd_toEndOf="@+id/inputDateStart"
        app:layout_constraintStart_toStartOf="@+id/inputDateStart" />

    <TextView
        android:id="@+id/textDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/event_date_end"
        app:layout_constraintBottom_toTopOf="@+id/inputDateEnd"
        app:layout_constraintEnd_toEndOf="@+id/inputDateEnd"
        app:layout_constraintStart_toStartOf="@+id/inputDateEnd" />

    <Switch
        android:id="@+id/inputBusy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="10dp"
        android:text="@string/event_busy"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAllDay" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#d4010f"
        android:text="@string/event_add"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>