<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StorageActivity">


    <Switch
        android:id="@+id/switchSecure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:text="@string/storage_secure"
        android:switchPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBirthday" />

    <io.github.kobakei.materialfabspeeddial.FabSpeedDial
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:fab_fabBackgroundColor="@color/colorAccent"
        app:fab_fabDrawable="@drawable/ic_settings_black_24dp"
        app:fab_fabDrawableTint="@color/colorIconTint"
        app:fab_fabRotationAngle="45.0"

        app:fab_menu="@menu/menu_storage_fab"
        app:fab_miniFabBackgroundColorList="@array/listFabStorage"

        app:fab_miniFabDrawableTint="@color/colorIconTint"
        app:fab_miniFabRippleColor="@color/colorIconTint"

        app:fab_miniFabTextBackground="@color/colorDarkerBright"

        app:fab_miniFabTextColor="@color/colorLighterDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </io.github.kobakei.materialfabspeeddial.FabSpeedDial>

    <TextView
        android:id="@+id/inputBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:text="@string/date_default"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBirthday" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutSurname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutFirstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_surname"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFirstname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutSurname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_firstname"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/storage_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fab" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:text="@string/storage_back"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_birthday"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutFirstname" />

</androidx.constraintlayout.widget.ConstraintLayout>